# Flow4tTech-Flow4Food

./: .gitignore  CLAUDE.md  README.md  package-lock.json  railway.toml
backend/: .env.example  .gitignore  Makefile  README.md  diag_insumos.py  pyproject.toml  seed_test_data.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_empty.py  0002_auth.py  0003_cadastros_base.py  0004_itens.py  0005_estoque_compras.py  0006_comandas.py  0007_fechamento.py  0008_estabelecimento.py  0009_create_insumos.py  0010_create_produtos.py  0011_create_ficha_tecnica.py  0012_migrate_itens_data.py  0013_migrate_ficha_data.py  0014_update_fk_compras.py  0015_update_fk_itens_comanda.py  0016_update_fk_movimentos_estoque.py  0017_drop_old_tables.py  0018_add_parent_id_categorias.py  0019_add_status_compras.py  0020_reset_operational_tables.py  0021_unique_insumo_nome.py  0022_fix_unidade_base_legado.py  0023_zerar_quantidade_caixa.py  0024_comissoes_garcom.py  0025_categoria_ativo.py  0026_fornecedor_ativo.py  (+32 more)
backend/scripts/: setup_cliente.py
backend/src/: main.py
backend/tests/: conftest.py  test_auth.py  test_cadastros.py  test_caixa.py  test_comandas.py  test_compras.py  test_comprovante.py  test_configuracoes.py  test_consumo_interno.py  test_dashboard.py  test_estoque.py  test_fechamento.py  test_health.py  test_issue2_cas.py  test_issue2_concorrencia.py  test_issue3_onboarding.py  test_issue4_jwt_multitenant.py  test_issue5_billing.py  test_itens.py  test_produtos.py  test_reabertura.py  test_relatorios.py  test_relatorios_financeiros.py  test_rls.py
(+355 files in other folders)
